--- a/app/src/main/res/layout/activity_patient_booking_history.xml
+++ b/app/src/main/res/layout/activity_patient_booking_history.xml
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:menu="@menu/menu_navigation" />
+        app:menu="@menu/p_menu_navigation" />
 
     <TextView
         android:id="@+id/textView9"
