--- a/app/src/main/res/layout/activity_d_home_page.xml
+++ b/app/src/main/res/layout/activity_d_home_page.xml
@@ -47,4 +47,16 @@
         app:menu="@menu/d_menu_navigation"
         android:layout_alignParentBottom="true" />
 
+    <Button
+        android:id="@+id/btn_logout_doc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.724" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
