--- a/app/src/main/res/layout/activity_patient_consultation_history.xml
+++ b/app/src/main/res/layout/activity_patient_consultation_history.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PatientBookingHistory">
+    tools:context=".PatientConsultationHistory">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav_bar"
@@ -26,7 +26,7 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Booking History"
+        android:text="Consultation History"
         app:layout_constraintBottom_toBottomOf="@+id/bottom_nav_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
