--- a/app/src/main/res/layout/activity_doctor_consult_form.xml
+++ b/app/src/main/res/layout/activity_doctor_consult_form.xml
@@ -225,7 +225,7 @@
         app:layout_constraintTop_toBottomOf="@+id/dConsultLName" />
 
     <EditText
-        android:id="@+id/pConsultSymptom"
+        android:id="@+id/pConsultDiagnosis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
@@ -256,7 +256,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pConsultSymptom" />
+        app:layout_constraintTop_toBottomOf="@+id/pConsultDiagnosis" />
 
     <EditText
         android:id="@+id/editTextTextPersonName10"
