--- a/app/src/main/res/layout/activity_p_home_page.xml
+++ b/app/src/main/res/layout/activity_p_home_page.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PHomePage">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="307dp"
+        android:layout_width="match_parent"
         android:layout_height="208dp"
         android:paddingBottom="40dp"
+        android:layout_marginTop="4dp"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,65 +25,34 @@
 
     <Button
         android:id="@+id/log_out"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="38dp"
-
-        android:layout_marginTop="4dp"
-
+        android:layout_marginTop="48dp"
         android:background="@color/gradStart"
         android:text="Log Out"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.786" />
+        android:layout_below="@+id/p_details"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:id="@+id/p_details"
-        android:layout_width="151dp"
+        android:layout_width="wrap_content"
         android:layout_height="46dp"
-
-        android:layout_marginTop="4dp"
-
+        android:layout_marginTop="48dp"
+        android:layout_centerHorizontal="true"
         android:background="@color/gradStart"
         android:text="View Personal Details"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.557"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.609" />
+        android:layout_below="@+id/textView3"/>
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="186dp"
+        android:layout_width="match_parent"
         android:layout_height="56dp"
         android:text="Welcome to Redbox !"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.573"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.465" />
+        android:gravity="center"
+        android:layout_below="@+id/imageView"/>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:itemBackground="@color/colorPrimary"
-        app:itemIconTint="@drawable/selector"
-        app:itemTextColor="@drawable/selector"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:menu="@menu/p_menu_navigation" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
+</FrameLayout>
