Overhauled Patient and Doctor Homepages

--- a/app/src/main/res/layout/activity_doctor_frag.xml
+++ b/app/src/main/res/layout/activity_doctor_frag.xml
@@ -17,7 +17,9 @@
         app:tabIndicatorColor="@color/cardview_light_background"
         app:tabIconTint="#FFFFFF"
         app:tabPaddingStart="0dp"
-        app:tabPaddingEnd="0dp"/>
+        app:tabPaddingEnd="0dp"
+        app:tabMode="fixed"
+        app:tabInlineLabel="false"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
