--- a/app/src/main/res/layout/activity_d_home_page.xml
+++ b/app/src/main/res/layout/activity_d_home_page.xml
@@ -26,5 +26,16 @@
         android:layout_below="@+id/imageView"
         android:gravity="center"/>
 
+        <Button
+            android:id="@+id/log_out"
+            android:layout_width="wrap_content"
+            android:layout_height="38dp"
+            android:layout_marginTop="48dp"
+            android:background="@color/gradStart"
+            android:text="Log Out"
+            android:textColor="#FFFFFF"
+            android:layout_below="@+id/textView3"
+            android:layout_centerHorizontal="true"/>
+
     </RelativeLayout>
 </FrameLayout>
