--- a/app/src/main/res/layout/activity_doctor_or_patientt.xml
+++ b/app/src/main/res/layout/activity_doctor_or_patientt.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,10 +10,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:background="@color/white"
         android:gravity="center_horizontal|center_vertical"
         android:paddingLeft="15dp"
@@ -26,19 +24,12 @@
         android:visibility="visible"
         app:autoSizeTextType="none"
         app:fontFamily="serif"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.011"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:background="@color/white"
         android:gravity="center_horizontal|center_vertical"
         android:paddingLeft="15dp"
@@ -51,11 +42,7 @@
         android:visibility="visible"
         app:autoSizeTextType="none"
         app:fontFamily="serif"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.072"
+        android:layout_below="@+id/textView"
         tools:visibility="visible" />
 
     <View
@@ -64,11 +51,14 @@
         android:layout_height="1dp"
         android:layout_marginBottom="628dp"
         android:background="@color/gradStart"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
+        android:layout_below="@+id/textView2"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="70dp"
+        android:layout_below="@+id/imageView">
 
     <Button
         android:id="@+id/doctor"
@@ -77,12 +67,9 @@
         android:background="@color/gradStop"
         android:text="Doctor"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.244"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.634" />
+        android:layout_weight="1"
+        android:layout_marginLeft="64dp"
+        android:layout_marginRight="32dp"/>
 
     <Button
         android:id="@+id/patient"
@@ -91,24 +78,19 @@
         android:background="@color/gradStop"
         android:text="Patient"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.771"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.634" />
+        android:layout_weight="1"
+        android:layout_marginRight="64dp"
+        android:layout_marginLeft="32dp"/>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="307dp"
+        android:layout_width="match_parent"
+        android:layout_marginTop="70dp"
         android:layout_height="208dp"
         android:paddingBottom="40dp"
         android:src="@mipmap/ic_launcher"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.342" />
+        android:layout_below="@+id/textView2"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
