--- a/app/src/main/res/layout/activity_d_home_page.xml
+++ b/app/src/main/res/layout/activity_d_home_page.xml
@@ -37,5 +37,17 @@
             android:layout_below="@+id/textView3"
             android:layout_centerHorizontal="true"/>
 
+        <Button
+            android:id="@+id/testbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Consult Form(Test)"
+            android:background="@color/gradStart"
+            android:padding="4dp"
+            android:textColor="#FFFFFF"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/log_out"
+            android:layout_marginTop="12dp"/>
+
     </RelativeLayout>
 </FrameLayout>
